// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersComponent should render 1`] = `
<Section
  header="Users"
>
  <Dropdown
    onChange={[MockFunction]}
    options={
      Array [
        Object {
          "cvId": "idCv",
          "name": "CV",
          "userId": "partnerCv",
        },
        Object {
          "cvId": "cvId",
          "name": "Partner",
          "userId": "cvPartner",
        },
      ]
    }
    selectedOption={Object {}}
  />
</Section>
`;

exports[`UsersComponent should render empty 1`] = `
<Section
  header="No users found"
/>
`;

exports[`UsersComponent should render loading 1`] = `
<Section
  header="No users found"
>
  <Loading />
</Section>
`;
